Add action in BoundCodeProperty to create and edit shared base code for components.